[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/Buzzmon.png" type="Texture2D" id=1]
[ext_resource path="res://sprites/mainbg.png" type="Texture2D" id=2]
[ext_resource path="res://src/Character Select.gd" type="Script" id=3]
[ext_resource path="res://sprites/businesshead.png" type="Texture2D" id=4]
[ext_resource path="res://fonts/NES.tres" type="FontFile" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.34902, 0.843137, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.137255, 0.0862745, 0.588235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.34902, 0.843137, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.137255, 0.0862745, 0.588235, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[node name="Character Select" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite2D" parent="."]
position = Vector2( 643.009, 358.634 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2( 627.29, 107.194 )
scale = Vector2( 0.796987, 0.796987 )
texture = ExtResource( 1 )

[node name="CM" type="Button" parent="."]
offset_left = 420.0
offset_top = 216.0
offset_right = 589.0
offset_bottom = 257.0
focus_neighbor_right = NodePath("../ME")
focus_neighbor_bottom = NodePath("../Business")
mouse_filter = 2
theme_override_styles/hover = SubResource( 1 )
theme_override_styles/pressed = SubResource( 2 )
theme_override_styles/focus = SubResource( 3 )
theme_override_styles/normal = SubResource( 4 )
text = "Computational Media"

[node name="ME" type="Button" parent="."]
offset_left = 680.0
offset_top = 216.0
offset_right = 849.0
offset_bottom = 257.0
focus_neighbor_left = NodePath("../CM")
focus_neighbor_bottom = NodePath("../AE")
mouse_filter = 2
theme_override_styles/hover = SubResource( 1 )
theme_override_styles/pressed = SubResource( 2 )
theme_override_styles/focus = SubResource( 3 )
theme_override_styles/normal = SubResource( 4 )
text = "Mech Engineer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Business" type="Button" parent="."]
offset_left = 420.0
offset_top = 300.0
offset_right = 589.0
offset_bottom = 341.0
focus_neighbor_top = NodePath("../CM")
focus_neighbor_right = NodePath("../AE")
mouse_filter = 2
theme_override_styles/hover = SubResource( 5 )
theme_override_styles/pressed = SubResource( 6 )
theme_override_styles/normal = SubResource( 7 )
text = "Business"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AE" type="Button" parent="."]
offset_left = 680.0
offset_top = 300.0
offset_right = 849.0
offset_bottom = 341.0
focus_neighbor_left = NodePath("../Business")
focus_neighbor_top = NodePath("../ME")
mouse_filter = 2
theme_override_styles/hover = SubResource( 5 )
theme_override_styles/pressed = SubResource( 6 )
theme_override_styles/normal = SubResource( 7 )
text = "Aero Engineer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 632.286, 181.295 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Character" type="Sprite2D" parent="."]
visible = false
position = Vector2( 775.531, 117.731 )
scale = Vector2( 0.250861, 0.250861 )
texture = ExtResource( 4 )

[node name="Major" type="Label" parent="."]
visible = false
offset_left = 418.825
offset_top = 124.35
offset_right = 593.825
offset_bottom = 138.35
scale = Vector2( 1.5, 1.5 )
theme_override_fonts/font = ExtResource( 5 )
text = "Business Administration"

[connection signal="focus_entered" from="CM" to="." method="_on_CM_focus_entered"]
[connection signal="pressed" from="CM" to="." method="_on_CM_pressed"]
[connection signal="focus_entered" from="ME" to="." method="_on_ME_focus_entered"]
[connection signal="pressed" from="ME" to="." method="_on_ME_pressed"]
[connection signal="focus_entered" from="Business" to="." method="_on_Business_focus_entered"]
[connection signal="pressed" from="Business" to="." method="_on_Business_pressed"]
[connection signal="focus_entered" from="AE" to="." method="_on_AE_focus_entered"]
[connection signal="pressed" from="AE" to="." method="_on_AE_pressed"]
